# ring-slint

./: README.md  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
docs/: ANDROID.md  API.md
examples/: 01_hello.slint  02_counter.slint  04_callbacks.slint  04_loadstring.ring  05_callbacks.ring  05_invoke.ring  05_invoke.slint  06_globals.ring  06_globals.slint  06_invoke.ring  06_invoke.slint  07_globals.ring  07_timer.ring  07_timer.slint  08_temperature.ring  08_temperature.slint  08_types.ring  08_types.slint  09_timer.ring  09_todo.ring  10_stopwatch.ring  10_stopwatch.slint  10_temperature.ring  10_temperature.slint  11_calculator.ring  11_calculator.slint  11_custom_window.ring  11_custom_window.slint  11_fonts.ring  11_fonts.slint  12_custom_window.ring  12_custom_window.slint  12_images.ring  12_images.slint  13_fonts.ring  13_todo.ring  13_todo.slint  14_file_dialogs.ring  14_file_dialogs.slint  14_stopwatch.ring  (+13 more)
ios/: .gitignore  Cargo.toml  Info.plist  build.sh  project.yml
ios/src/: main.rs
src/: slint.ring
src/rust_src/: Cargo.toml
src/rust_src/src/: android.rs  lib.rs
src/rust_src/src/slint/: callback.rs  clipboard.rs  component.rs  dialogs.rs  hotkey.rs  interpreter.rs  mod.rs  model.rs  notification.rs  timer.rs  tray.rs  value.rs
