[package]
name = "ring_slint"
version = "1.0.0"
edition = "2024"
description = "Slint GUI bindings for the Ring programming language"
license = "MIT"

[lib]
name = "ring_slint"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ring-lang-rs = "0.1"
libc = "0.2"
i-slint-core = "1.15"
spin_on = "0.1"
once_cell = "1.19"
lazy_static = "1.5.0"

[target.'cfg(any(target_os = "android", target_os = "ios", target_family = "wasm"))'.dependencies]
ring-lang-rs = { version = "0.1", features = ["extension"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
log = "0.4"

# Desktop + iOS: winit + skia
[target.'cfg(all(not(target_os = "android"), not(target_os = "freebsd")))'.dependencies.slint-interpreter]
version = "1.15"
default-features = false
features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "display-diagnostics",
    "compat-1-2"
]

[target.'cfg(target_os = "freebsd")'.dependencies.slint-interpreter]
version = "1.15"
default-features = false
features = [
    "std",
    "backend-winit",
    "renderer-femtovg",
    "display-diagnostics",
    "compat-1-2"
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.i-slint-backend-winit]
version = "1.15"

# Desktop-only dependencies (not Android, not iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rfd = "0.17"
notify-rust = "4.11.7"
arboard = "3.6.1"
global-hotkey = "0.7.0"
winit = "0.30.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Linux/BSD: use ksni (pure Rust D-Bus/SNI, no GTK conflict)
[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }

# Windows/macOS (desktop only): use tray-icon (native APIs, no GTK needed)
[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
tray-icon = "0.21"

[target.'cfg(target_os = "android")'.dependencies.slint]
version = "1.15"
default-features = false
features = [
    "std",
    "backend-android-activity-06",
    "renderer-skia",
    "compat-1-2"
]

[target.'cfg(target_os = "android")'.dependencies.slint-interpreter]
version = "1.15"
default-features = false
features = [
    "std",
    "compat-1-2"
]

[build-dependencies]
cc = "1.0"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.android]
package = "dev.ring.slint"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android"]
assets = "assets"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 35

[package.metadata.android.application]
label = "Ring Slint App"

# [package.metadata.android.signing.release]
# path = "debug.keystore"
# keystore_password = "android"
# key_alias = "androiddebugkey"
# key_password = "android"
